--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -10,20 +10,24 @@ package:
 source:
   fn: SPARQL_{{ version }}.tar.gz
   url:
-    - https://cran.r-project.org/src/contrib/SPARQL_{{ version }}.tar.gz
-    - https://cran.r-project.org/src/contrib/Archive/SPARQL/SPARQL_{{ version }}.tar.gz
+    - {{ cran_mirror }}/src/contrib/SPARQL_{{ version }}.tar.gz
+    - {{ cran_mirror }}/src/contrib/Archive/SPARQL/SPARQL_{{ version }}.tar.gz
   sha256: 2cb366b2b93804c12f17254a1c37687887fc12047b58b13aab0d7a6f000e533d
 
 # r-rcurl isn't available on Windows yet
 build:
+  merge_build_host: True  # [win]
   number: 1
-  skip: true
-
+  skip: true # [win]
   rpaths:
     - lib/R/lib/
     - lib/
+
 requirements:
   build:
+    - {{posix}}zip               # [win]
+
+  host:
     - r-base
     - r-rcurl
     - r-xml
